# mipt_homeworks_2025

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  repo_statistics.csv  repo_statistics.json
homework_oop/: repositories_short.csv
homework_oop/csv_reader/: reader.py
homework_oop/csv_writer/: writer.py
homework_oop/data_processor/: data_processor.py
homework_oop/stat_analyzer/: stat_analyzer.py
homework_oop/user/: user.py
